<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/initial_bg_color_label"
                android:labelFor="@id/initial_bg_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/initial_bg_color"
                android:layout_width="@dimen/min_color_view_width"
                android:layout_height="@dimen/min_color_view_height"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/target_time_label"
                android:labelFor="@id/target_time"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/target_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="18:42"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/target_bg_color_label"
                android:labelFor="@id/target_bg_color"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/target_bg_color"
                android:layout_width="@dimen/min_color_view_width"
                android:layout_height="@dimen/min_color_view_height"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/pre_target_minutes"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="3"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/pre_target_minutes_label"
                android:labelFor="@+id/pre_target_minutes"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/pre_target_bg_color_label"
                android:labelFor="@id/pre_target_bg_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pre_target_bg_color"
                android:layout_width="@dimen/min_color_view_width"
                android:layout_height="@dimen/min_color_view_height"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/dial_color_label"
                android:labelFor="@id/dial_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dial_color"
                android:layout_width="@dimen/min_color_view_width"
                android:layout_height="@dimen/min_color_view_height"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_button"
            />
    </LinearLayout>
</ScrollView>
